# raycast-native

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE
setup/linux/: install_packages.sh  install_vcpkg.sh
setup/windows/: install_packages.bat  install_vcpkg.bat
source/: CMakeLists.txt  constants.h  main.c
